--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,7 +44,7 @@ country.arm           = Armenien
 country.aru           = Aruba
 country.asa           = Amerikanisch Samoa
 country.at            = \u00D6sterreich
-country.atg           = Antigua + Barbuda
+country.atg           = Antigua+Barbuda
 country.au            = Australien
 country.aze           = Azerbaijan
 country.bah           = Bahamas
@@ -56,7 +56,7 @@ country.ber           = Bermuda
 country.bfa           = Burkina Faso
 country.bhr           = Bahrain
 country.bhu           = Bhutan
-country.bih           = Bosnien-Herzegovina
+country.bih           = Bosnien-Herzeg.
 country.blr           = Belarus
 country.blz           = Belize
 country.bol           = Bolivien
@@ -81,7 +81,7 @@ country.col           = Kolumbien
 country.com           = Comoros
 country.cpv           = Kap Verde
 country.crc           = Costa Rica
-country.cta           = Zentralafrikanische Republik
+country.cta           = Zent. Afr. Republik
 country.cub           = Kuba
 country.cuw           = Curacao
 country.cyp           = Zypern
@@ -90,7 +90,7 @@ country.de            = Deutschland
 country.den           = D\u00E4nemark
 country.dji           = Dschibuti
 country.dma           = Dominica
-country.dom           = Dominikanische Republik
+country.dom           = Dominik. Republik
 country.ecu           = Ecuador
 country.egy           = \u00C4gypten
 country.en            = England
@@ -229,16 +229,16 @@ country.tr            = T\u00FCrkei
 country.tri           = Trinidad + Tobago
 country.tun           = Tunesien
 country.ua            = Ukraine
-country.uae           = Vereinigte Arabische Emirate
+country.uae           = Verein. Arabische Emirate
 country.uga           = Uganda
 country.uru           = Uruguay
 country.usa           = USA
 country.uzb           = Uzbekistan
 country.van           = Vanuatu
 country.ven           = Venezuela
-country.vgb           = Britische Virgin Inseln
+country.vgb           = Brit. Virgin Inseln
 country.vie           = Vietnam
-country.vin           = St. Vincent Grenadinen
+country.vin           = St. Vincent Gren.
 country.vir           = Virgin Inseln
 country.wales         = Wales
 country.yem           = Yemen
