--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,7 +44,7 @@ country.arm           = Armenia
 country.aru           = Aruba
 country.asa           = American Samoa
 country.at            = Austria
-country.atg           = Antigua + Barbuda
+country.atg           = Antigua+Barbuda
 country.au            = Australia
 country.aze           = Azerbaijan
 country.bah           = Bahamas
@@ -56,7 +56,7 @@ country.ber           = Bermuda
 country.bfa           = Burkina Faso
 country.bhr           = Bahrain
 country.bhu           = Bhutan
-country.bih           = Bosnia Herzegovina
+country.bih           = Bosnia Herzeg.
 country.blr           = Belarus
 country.blz           = Belize
 country.bol           = Bolivia
@@ -81,7 +81,7 @@ country.col           = Colombia
 country.com           = Comoros
 country.cpv           = Cape Verde
 country.crc           = Costa Rica
-country.cta           = Central African Republic
+country.cta           = Cent. African Republic
 country.cub           = Cuba
 country.cuw           = Curacao
 country.cyp           = Cyprus
@@ -90,7 +90,7 @@ country.de            = Germany
 country.den           = Denmark
 country.dji           = Djibouti
 country.dma           = Dominica
-country.dom           = Dominican Republic
+country.dom           = Domin. Republic
 country.ecu           = Ecuador
 country.egy           = Egypt
 country.en            = England
@@ -229,16 +229,16 @@ country.tr            = Turkey
 country.tri           = Trinidad + Tobago
 country.tun           = Tunisia
 country.ua            = Ukraine
-country.uae           = United Arab Emirates
+country.uae           = United Arab Emir.
 country.uga           = Uganda
 country.uru           = Uruguay
 country.usa           = USA
 country.uzb           = Uzbekistan
 country.van           = Vanuatu
 country.ven           = Venezuela
-country.vgb           = British Virgin Islands
+country.vgb           = Brit. Virgin Islands
 country.vie           = Vietnam
-country.vin           = St. Vincent Grenadines
+country.vin           = St. Vincent Gren.
 country.vir           = US Virgin Islands
 country.wales         = Wales
 country.yem           = Yemen
