--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,7 +90,7 @@ country.de            = Deutschland
 country.den           = D\u00E4nemark
 country.dji           = Dschibuti
 country.dma           = Dominica
-country.dom           = Dominik. Republik
+country.dom           = Dominikanische Republik
 country.ecu           = Ecuador
 country.egy           = \u00C4gypten
 country.en            = England
