--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -90,7 +90,7 @@ country.de            = Germany
 country.den           = Denmark
 country.dji           = Djibouti
 country.dma           = Dominica
-country.dom           = Domin. Republic
+country.dom           = Dominican Republic
 country.ecu           = Ecuador
 country.egy           = Egypt
 country.en            = England
