implemented excel upload

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -247,6 +247,14 @@ country.zam           = Zambia
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
+excel.import.title           = Excel-Datei mit Spielen importieren
+excel.upload.button          = Datei hochladen
+excel.upload.file            = Excel-Datei mit Spielen hochladen
+excel.upload.msg.failed      = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
+excel.upload.msg.noExcelFile = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
+excel.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
+excel.upload.msg.saved       = Die Excel-Datei wurde erfolgreich importiert!
+
 extra_bets.finalWinner     = Europameister
 extra_bets.points          = {0} Punkte
 extra_bets.reachablePoints = m\u00F6gliche Punktzahl
@@ -387,6 +395,7 @@ navigation.betting.open      = noch zu tippen
 navigation.buildInfo         = Build Info
 navigation.changePassword    = Passwort \u00E4ndern
 navigation.dataCreation      = Datenanlage
+navigation.excelimport       = Excel-Import
 navigation.info              = Infos
 navigation.logout            = Abmelden
 navigation.ranking           = Ranking
