--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -247,6 +247,14 @@ country.zam           = Zambia
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
+excel.import.title           = Import matches via Excel
+excel.upload.button          = Upload file
+excel.upload.file            = Upload Excel file with matches
+excel.upload.msg.failed      = An error occured while importing the excel file. Cause: {0}
+excel.upload.msg.noExcelFile = The uploaded file is not an excel file (.xlsx)!
+excel.upload.msg.noFileGiven = Please choose excel file to upload!
+excel.upload.msg.saved       = The Excel file was imported successfully!
+
 extra_bets.finalWinner     = European champion
 extra_bets.points          = {0} points
 extra_bets.reachablePoints = reachable points
@@ -387,6 +395,7 @@ navigation.betting.open      = not betted yet
 navigation.buildInfo         = Build Info
 navigation.changePassword    = Changed password!
 navigation.dataCreation      = Create data
+navigation.excelimport       = Excel-Import
 navigation.info              = Info
 navigation.logout            = Logout
 navigation.ranking           = Ranking
