download excel template

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -247,6 +247,7 @@ country.zam           = Zambia
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
+excel.download.template      = Excel-Vorlage herunterladen
 excel.import.title           = Excel-Datei mit Spielen importieren
 excel.upload.button          = Datei hochladen
 excel.upload.file            = Excel-Datei mit Spielen hochladen
