--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -247,6 +247,7 @@ country.zam           = Zambia
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
+excel.download.template      = Download Excel template
 excel.import.title           = Import matches via Excel
 excel.upload.button          = Upload file
 excel.upload.file            = Upload Excel file with matches
