--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -250,7 +250,7 @@ error.title               = Error
 excel.download.template      = Download Excel template
 excel.import.title           = Import matches via Excel
 excel.upload.button          = Upload file
-excel.upload.file            = Upload Excel file with matches
+excel.upload.file            = Upload Excel file
 excel.upload.msg.failed      = An error occured while importing the excel file. Cause: {0}
 excel.upload.msg.noExcelFile = The uploaded file is not an excel file (.xlsx)!
 excel.upload.msg.noFileGiven = Please choose excel file to upload!
