--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -250,7 +250,7 @@ error.title               = Fehler
 excel.download.template      = Excel-Vorlage herunterladen
 excel.import.title           = Excel-Datei mit Spielen importieren
 excel.upload.button          = Datei hochladen
-excel.upload.file            = Excel-Datei mit Spielen hochladen
+excel.upload.file            = Excel-Datei hochladen
 excel.upload.msg.failed      = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
 excel.upload.msg.noExcelFile = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
 excel.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
