update permission handling deleting images

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -300,6 +300,7 @@ group.title.semiFinal        = Halbfinale
 groups = Gruppen
 
 image.gallery.downloadAll             = Alle Fotos herunterladen
+image.gallery.msg.delete.perm.denied  = Sie k\u00F6nnen nur Ihre eigenen Fotos l\u00F6schen!
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
 image.gallery.msg.noImages            = Keine Fotos vorhanden!
 image.gallery.title                   = Fotoalbum
