--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -300,6 +300,7 @@ group.title.semiFinal        = Semi Final
 groups = Groups
 
 image.gallery.downloadAll             = Download all images
+image.gallery.msg.delete.perm.denied  = You can delete you own images only!
 image.gallery.msg.deleted             = The image has been deleted!
 image.gallery.msg.noImages            = No saved images available!
 image.gallery.title                   = Image Gallery
