--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,7 +90,7 @@ country.de            = Deutschland
 country.den           = D\u00E4nemark
 country.dji           = Dschibuti
 country.dma           = Dominica
-country.dom           = Dominikanische Republik
+country.dom           = Dom. Republik
 country.ecu           = Ecuador
 country.egy           = \u00C4gypten
 country.en            = England
@@ -229,7 +229,7 @@ country.tr            = T\u00FCrkei
 country.tri           = Trinidad + Tobago
 country.tun           = Tunesien
 country.ua            = Ukraine
-country.uae           = Verein. Arabische Emirate
+country.uae           = Verein. Arab. Emirate
 country.uga           = Uganda
 country.uru           = Uruguay
 country.usa           = USA
