added button to delete all bets and matches

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,16 +1,18 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
-administration.createEmMatches               = EM 2016 Gruppenspiele anlegen
-administration.createRandomMatches           = Zufallsspiele anlegen
-administration.demoBetsAllUsers              = Testtipps f\u00FCr alle Benutzer anlegen
-administration.msg.info.demoBetsCreated      = Test-Tipps wurden erfolgreich angelegt!
-administration.msg.info.demoMatchesCreated   = Testspiele wurden erfolgreich angelegt!
-administration.msg.info.demoResultsCreated   = Testergebnisse erfolgreich erzeugt!
-administration.msg.info.randomMatchesCreated = Zufallsspiele wurden erfolgreich angelegt!
-administration.purgeOldActiveUsers           = \u00E4lter als 30 min l\u00F6schen
-administration.testResultsAllUsers           = Testergebnisse f\u00FCr alle Benutzer erzeugen
-administration.title                         = Administration
+administration.createEmMatches                   = EM 2016 Gruppenspiele anlegen
+administration.createRandomMatches               = Zufallsspiele anlegen
+administration.deleteAllBetsAndMatches           = Alle Tipps und Spiele l\u00F6schen
+administration.demoBetsAllUsers                  = Testtipps f\u00FCr alle Benutzer anlegen
+administration.msg.info.allBetsAndMatchesDeleted = Alle Tipps und Spiele wurden gel\u00F6scht
+administration.msg.info.demoBetsCreated          = Test-Tipps wurden erfolgreich angelegt!
+administration.msg.info.demoMatchesCreated       = Testspiele wurden erfolgreich angelegt!
+administration.msg.info.demoResultsCreated       = Testergebnisse erfolgreich erzeugt!
+administration.msg.info.randomMatchesCreated     = Zufallsspiele wurden erfolgreich angelegt!
+administration.purgeOldActiveUsers               = \u00E4lter als 30 min l\u00F6schen
+administration.testResultsAllUsers               = Testergebnisse f\u00FCr alle Benutzer erzeugen
+administration.title                             = Administration
 
 all.matches = alle Spiele
 
