--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,16 +1,18 @@
 
 active.users.title = currently logged in users
 
-administration.createEmMatches               = create matches of EM 2016
-administration.createRandomMatches           = create random matches
-administration.demoBetsAllUsers              = create demo bets for all users
-administration.msg.info.demoBetsCreated      = Test bets created successfully!
-administration.msg.info.demoMatchesCreated   = Test matches created successfully!
-administration.msg.info.demoResultsCreated   = Test results created successfully!
-administration.msg.info.randomMatchesCreated = created random matches successfully
-administration.purgeOldActiveUsers           = purge older than 30 min
-administration.testResultsAllUsers           = create demo results for all users
-administration.title                         = Administration
+administration.createEmMatches                   = create matches of EM 2016
+administration.createRandomMatches               = create random matches
+administration.deleteAllBetsAndMatches           = Delete all bets and matches
+administration.demoBetsAllUsers                  = create demo bets for all users
+administration.msg.info.allBetsAndMatchesDeleted = All bets and matches deleted!
+administration.msg.info.demoBetsCreated          = Test bets created successfully!
+administration.msg.info.demoMatchesCreated       = Test matches created successfully!
+administration.msg.info.demoResultsCreated       = Test results created successfully!
+administration.msg.info.randomMatchesCreated     = created random matches successfully
+administration.purgeOldActiveUsers               = purge older than 30 min
+administration.testResultsAllUsers               = create demo results for all users
+administration.title                             = Administration
 
 all.matches = All Matches
 
