--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -433,6 +433,10 @@ user.edit.title                              = Benutzer bearbeiten
 user.edit.username                           = Benutzername
 user.edited                                  = Der Benutzer {0} wurde aktualisiert!
 user.edited.noRole                           = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
+user.image.cropping.result                   = Ergebnis
+user.image.cropping.select.range             = Ausschnitt ausw\u00E4hlen
+user.image.cropping.title                    = Profilbild \u00E4ndern
+user.image.cropping.upload                   = Foto hochladen
 user.list.createUser                         = Benutzer anlegen
 user.list.title                              = Benutzer
 user.not.deletable                           = Der Benutzer mit dem Namen {0} ist als nicht l\u00F6schbar markiert!
