--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -433,6 +433,10 @@ user.edit.title                              = edit user
 user.edit.username                           = username
 user.edited                                  = The user {0} has been updated!
 user.edited.noRole                           = Please choose at least one of these roles!
+user.image.cropping.result                   = Result
+user.image.cropping.select.range             = extract image
+user.image.cropping.title                    = Change profile image
+user.image.cropping.upload                   = Upload image
 user.list.createUser                         = create user
 user.list.title                              = user
 user.not.deletable                           = The user with name {0} is not deletable!
