--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -402,6 +402,7 @@ navigation.dataCreation      = Datenanlage
 navigation.excelimport       = Excel-Import
 navigation.info              = Infos
 navigation.logout            = Abmelden
+navigation.profileImage      = Profilfoto \u00E4ndern
 navigation.ranking           = Ranking
 navigation.user              = Benutzer
 
