--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -402,6 +402,7 @@ navigation.dataCreation      = Create data
 navigation.excelimport       = Excel-Import
 navigation.info              = Info
 navigation.logout            = Logout
+navigation.profileImage      = Change profile image
 navigation.ranking           = Ranking
 navigation.user              = User
 
