edit image group

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -313,6 +313,7 @@ image.group.msg.added                 = Die Gruppe mit dem Namen {0} wurde hinzu
 image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
 image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6schen Sie die Fotos zuerst!
 image.group.msg.groupExist            = Eine Gruppe mit dem Namen {0} existiert bereits!
+image.group.msg.updated               = Die Gruppe wurde aktualisiert!
 image.group.name                      = Gruppe
 image.group.title                     = Foto Gruppen
 image.upload.button                   = Foto hochladen
