--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -313,6 +313,7 @@ image.group.msg.added                 = The group with name {0} has been added!
 image.group.msg.deleted               = The group has been deleted!
 image.group.msg.deletionHasReferences = There are images already assigned to this group! Please delete these images first!
 image.group.msg.groupExist            = A group with name {0} already exists!
+image.group.msg.updated               = Group updated!
 image.group.name                      = group
 image.group.title                     = image groups
 image.upload.button                   = upload image
