--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,6 +33,7 @@ button.back              = zur\u00FCck
 button.backToImageUpload = Zur\u00FCck zum Foto Upload
 button.cancel            = Abbrechen
 button.delete            = L\u00F6schen
+button.edit              = \u00C4ndern
 button.save              = Speichern
 
 country.afg           = Afghanistan
@@ -309,12 +310,12 @@ image.gallery.title                   = Fotoalbum
 image.gallery.toUploadImagePage       = weitere Fotos hochladen
 image.group.button.delete             = Gruppe l\u00F6schen
 image.group.id                        = Gruppen ID
-image.group.msg.added                 = Die Gruppe mit dem Namen {0} wurde hinzugef\u00FCgt!
+image.group.msg.added                 = Die Gruppe mit dem Namen "{0}" wurde hinzugef\u00FCgt!
 image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
 image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6schen Sie die Fotos zuerst!
-image.group.msg.groupExist            = Eine Gruppe mit dem Namen {0} existiert bereits!
-image.group.msg.updated               = Die Gruppe wurde aktualisiert!
-image.group.name                      = Gruppe
+image.group.msg.groupExist            = Eine Gruppe mit dem Namen "{0}" existiert bereits!
+image.group.msg.updated               = Die Gruppe "{0}" wurde aktualisiert!
+image.group.name                      = Gruppenname
 image.group.title                     = Foto Gruppen
 image.upload.button                   = Foto hochladen
 image.upload.deleteImage              = Foto l\u00F6schen
