--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -412,7 +412,7 @@ penalty.box.heading = Winner after penalty shot
 
 prices.title = Prices
 
-ranking.list.order = Ranking
+ranking.list.order = Rank
 ranking.list.title = Ranking
 ranking.noRankings = No bets assigned!
 
