refactored using flag for user profile image group

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -347,7 +347,7 @@ login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
 login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
-login.title                = Fredbet - Anmelden
+login.title                = Anmelden
 login.title.short          = Anmelden
 
 matches.form.chooseCountry = L\u00E4nderauswahl
