--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -347,7 +347,7 @@ login.button.login         = Login
 login.msg.error            = Invalid username or password!
 login.placeholder.password = Password
 login.placeholder.username = Username
-login.title                = Fredbet - Login
+login.title                = Login
 login.title.short          = Login
 
 matches.form.chooseCountry = Country selection
