--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -259,12 +259,12 @@ excel.upload.msg.noExcelFile = Die hochgeladene Datei ist keine Excel-Datei (.xl
 excel.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
 excel.upload.msg.saved       = Die Excel-Datei wurde erfolgreich importiert!
 
-extra_bets.finalWinner     = Europameister
+extra_bets.finalWinner     = Meister
 extra_bets.points          = {0} Punkte
 extra_bets.reachablePoints = m\u00F6gliche Punktzahl
 extra_bets.reachedPoints   = erzielte Punkte
-extra_bets.semiFinalWinner = Vize-Europameister
-extra_bets.title           = Europameister und Vize-Europameister tippen
+extra_bets.semiFinalWinner = Vize-Meister
+extra_bets.title           = Meister und Vize-Meister tippen
 
 extrabet.bets.of.others = ... das haben die anderen getippt
 
