refactored build info

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -398,7 +398,6 @@ navigation.administration    = Administration
 navigation.betting           = Tippen
 navigation.betting.extraBets = Bonus-Tipps
 navigation.betting.open      = noch zu tippen
-navigation.buildInfo         = Build Info
 navigation.changePassword    = Passwort \u00E4ndern
 navigation.dataCreation      = Datenanlage
 navigation.excelimport       = Excel-Import
@@ -406,6 +405,7 @@ navigation.info              = Infos
 navigation.logout            = Abmelden
 navigation.profileImage      = Profilfoto \u00E4ndern
 navigation.ranking           = Ranking
+navigation.systemInfo        = Systeminformationen
 navigation.user              = Benutzer
 
 penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
