--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -398,7 +398,6 @@ navigation.administration    = Administration
 navigation.betting           = Betting
 navigation.betting.extraBets = bonus bets
 navigation.betting.open      = not betted yet
-navigation.buildInfo         = Build Info
 navigation.changePassword    = Changed password!
 navigation.dataCreation      = Create data
 navigation.excelimport       = Excel-Import
@@ -406,6 +405,7 @@ navigation.info              = Info
 navigation.logout            = Logout
 navigation.profileImage      = Change profile image
 navigation.ranking           = Ranking
+navigation.systemInfo        = System Info
 navigation.user              = User
 
 penalty.box.heading = Winner after penalty shot
