added system properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,8 +27,6 @@ bet.list.title         = Meine Spieletipps
 bet.listOpen.title     = Noch nicht getippt
 bet.others.title       = Tipps der anderen...
 
-buildinfo.title = Build Info
-
 button.back              = zur\u00FCck
 button.backToImageUpload = Zur\u00FCck zum Foto Upload
 button.cancel            = Abbrechen
@@ -419,6 +417,8 @@ ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 rules.title = Regeln
 
 statistics.title = Punkte-Statistik
+
+systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
 
