--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,8 +27,6 @@ bet.list.title         = My bettings
 bet.listOpen.title     = matches to bet
 bet.others.title       = bets of the others...
 
-buildinfo.title = Build Info
-
 button.back              = Back
 button.backToImageUpload = Back to image upload
 button.cancel            = Cancel
@@ -419,6 +417,8 @@ ranking.noRankings = No bets assigned!
 rules.title = Rules
 
 statistics.title = points statistic
+
+systeminfo.title = System Info
 
 upcoming.matches = Upcoming Matches
 
