--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -341,6 +341,8 @@ info.rules.edit.button  = Regeln editieren
 language.de = deutsch
 language.en = englisch
 
+lastlogins.title = Letzte Logins der Benutzer
+
 login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
 login.placeholder.password = Passwort
@@ -400,6 +402,7 @@ navigation.changePassword    = Passwort \u00E4ndern
 navigation.dataCreation      = Datenanlage
 navigation.excelimport       = Excel-Import
 navigation.info              = Infos
+navigation.lastlogin         = Letzte Logins
 navigation.logout            = Abmelden
 navigation.profileImage      = Profilfoto \u00E4ndern
 navigation.ranking           = Ranking
