--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -341,6 +341,8 @@ info.rules.edit.button  = edit rules
 language.de = german
 language.en = english
 
+lastlogins.title = Last logins of users
+
 login.button.login         = Login
 login.msg.error            = Invalid username or password!
 login.placeholder.password = Password
@@ -400,6 +402,7 @@ navigation.changePassword    = Changed password!
 navigation.dataCreation      = Create data
 navigation.excelimport       = Excel-Import
 navigation.info              = Info
+navigation.lastlogin         = Last logins
 navigation.logout            = Logout
 navigation.profileImage      = Change profile image
 navigation.ranking           = Ranking
