showing last logins

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,8 @@ administration.title                             = Administration
 
 all.matches = alle Spiele
 
-app.dateformat = EEE dd. MMMM yyyy HH:mm
+app.dateformat            = EEE dd. MMMM yyyy HH:mm
+app.dateformatWithSeconds = EEE dd. MMMM yyyy HH:mm:ss
 
 bet.edit.heading       = Tipp abgeben
 bet.edit.title         = Spieltipp
