--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -16,7 +16,8 @@ administration.title                             = Administration
 
 all.matches = All Matches
 
-app.dateformat = EEE dd MMMM yyyy HH:mm
+app.dateformat            = EEE dd MMMM yyyy HH:mm
+app.dateformatWithSeconds = EEE dd MMMM yyyy HH:mm:ss
 
 bet.edit.heading       = Enter bet
 bet.edit.title         = match bet
