--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -249,7 +249,8 @@ country.zam           = Zambia
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
-excel.download.template      = Excel-Vorlage herunterladen
+excel.download.template      = Excel-Vorlage
+excel.download.template.name = Vorlagen
 excel.import.title           = Excel-Datei mit Spielen importieren
 excel.upload.button          = Datei hochladen
 excel.upload.file            = Excel-Datei hochladen
