--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -249,7 +249,8 @@ country.zam           = Zambia
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
-excel.download.template      = Download Excel template
+excel.download.template      = Excel Template
+excel.download.template.name = Templates
 excel.import.title           = Import matches via Excel
 excel.upload.button          = Upload file
 excel.upload.file            = Upload Excel file
