delete all matches on template import

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -249,15 +249,16 @@ country.zam           = Zambia
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
 
-excel.download.template      = Excel-Vorlage
-excel.download.template.name = Vorlagen
-excel.import.title           = Excel-Datei mit Spielen importieren
-excel.upload.button          = Datei hochladen
-excel.upload.file            = Excel-Datei hochladen
-excel.upload.msg.failed      = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
-excel.upload.msg.noExcelFile = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
-excel.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
-excel.upload.msg.saved       = Die Excel-Datei wurde erfolgreich importiert!
+excel.download.hint.allMatchesDeleted = Achtung! Alle vorhandenen Spiele werden gel\u00F6scht!
+excel.download.template               = Excel-Vorlage
+excel.download.template.name          = Vorlagen
+excel.import.title                    = Excel-Datei mit Spielen importieren
+excel.upload.button                   = Datei hochladen
+excel.upload.file                     = Excel-Datei hochladen
+excel.upload.msg.failed               = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
+excel.upload.msg.noExcelFile          = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
+excel.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
+excel.upload.msg.saved                = Die Excel-Datei wurde erfolgreich importiert!
 
 extra_bets.finalWinner     = Meister
 extra_bets.points          = {0} Punkte
