--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -249,15 +249,16 @@ country.zam           = Zambia
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
 
-excel.download.template      = Excel Template
-excel.download.template.name = Templates
-excel.import.title           = Import matches via Excel
-excel.upload.button          = Upload file
-excel.upload.file            = Upload Excel file
-excel.upload.msg.failed      = An error occured while importing the excel file. Cause: {0}
-excel.upload.msg.noExcelFile = The uploaded file is not an excel file (.xlsx)!
-excel.upload.msg.noFileGiven = Please choose excel file to upload!
-excel.upload.msg.saved       = The Excel file was imported successfully!
+excel.download.hint.allMatchesDeleted = Caution! All existing matches will be deleted!
+excel.download.template               = Excel Template
+excel.download.template.name          = Templates
+excel.import.title                    = Import matches via Excel
+excel.upload.button                   = Upload file
+excel.upload.file                     = Upload Excel file
+excel.upload.msg.failed               = An error occured while importing the excel file. Cause: {0}
+excel.upload.msg.noExcelFile          = The uploaded file is not an excel file (.xlsx)!
+excel.upload.msg.noFileGiven          = Please choose excel file to upload!
+excel.upload.msg.saved                = The Excel file was imported successfully!
 
 extra_bets.finalWinner     = champion
 extra_bets.points          = {0} points
