limit username to 12 chars

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -452,6 +452,7 @@ user.username.duplicate                      = Dieser Benutzername ist bereits v
 user.validation.emptyUsername                = Bitte geben Sie einen Benutzernamen an!
 user.validation.password                     = Bitte geben Sie ein Passwort an!
 user.validation.roles                        = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
+user.validation.username.containsBlanks      = Der Benutzername darf keine Leerzeichen enthalten!
 
 userprofile.changePassword.newPassword       = neues Passwort
 userprofile.changePassword.newPasswordRepeat = neues Passwort wiederholen
