--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -452,6 +452,7 @@ user.username.duplicate                      = The entered username is already a
 user.validation.emptyUsername                = Please enter a username!
 user.validation.password                     = Please enter a password!
 user.validation.roles                        = Please choose one of the given roles!
+user.validation.username.containsBlanks      = The username does not contain blanks!
 
 userprofile.changePassword.newPassword       = new password
 userprofile.changePassword.newPasswordRepeat = new password repeat
