--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -453,6 +453,7 @@ user.validation.emptyUsername                = Bitte geben Sie einen Benutzernam
 user.validation.password                     = Bitte geben Sie ein Passwort an!
 user.validation.roles                        = Bitte w\u00E4hlen Sie mind. eine Berechtigung!
 user.validation.username.containsBlanks      = Der Benutzername darf keine Leerzeichen enthalten!
+user.validation.username.tooLong             = Der Benutzername darf nicht l\u00E4nger als {} Zeichen sein!
 
 userprofile.changePassword.newPassword       = neues Passwort
 userprofile.changePassword.newPasswordRepeat = neues Passwort wiederholen
