--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -453,6 +453,7 @@ user.validation.emptyUsername                = Please enter a username!
 user.validation.password                     = Please enter a password!
 user.validation.roles                        = Please choose one of the given roles!
 user.validation.username.containsBlanks      = The username does not contain blanks!
+user.validation.username.tooLong             = The username must not be longer than {} characters!
 
 userprofile.changePassword.newPassword       = new password
 userprofile.changePassword.newPasswordRepeat = new password repeat
