--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -415,7 +415,7 @@ penalty.box.heading = Gewinner nach 11 Meter schie\u00DFen
 
 prices.title = Preise
 
-ranking.list.title = Ranking
+ranking.list.title = Platzierung
 ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 rules.title = Regeln
