added extra bet for third

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -260,12 +260,13 @@ excel.upload.msg.noExcelFile          = Die hochgeladene Datei ist keine Excel-D
 excel.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
 excel.upload.msg.saved                = Die Excel-Datei wurde erfolgreich importiert!
 
-extra_bets.finalWinner     = Meister
-extra_bets.points          = {0} Punkte
-extra_bets.reachablePoints = m\u00F6gliche Punktzahl
-extra_bets.reachedPoints   = erzielte Punkte
-extra_bets.semiFinalWinner = Vize-Meister
-extra_bets.title           = Meister und Vize-Meister tippen
+extra_bets.finalWinner      = Meister
+extra_bets.points           = {0} Punkte
+extra_bets.reachablePoints  = m\u00F6gliche Punktzahl
+extra_bets.reachedPoints    = erzielte Punkte
+extra_bets.semiFinalWinner  = Vize-Meister
+extra_bets.thirdFinalWinner = 3. Platz
+extra_bets.title            = Meister und Vize-Meister tippen
 
 extrabet.bets.of.others = ... das haben die anderen getippt
 
