--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -260,12 +260,13 @@ excel.upload.msg.noExcelFile          = The uploaded file is not an excel file (
 excel.upload.msg.noFileGiven          = Please choose excel file to upload!
 excel.upload.msg.saved                = The Excel file was imported successfully!
 
-extra_bets.finalWinner     = champion
-extra_bets.points          = {0} points
-extra_bets.reachablePoints = reachable points
-extra_bets.reachedPoints   = reached points
-extra_bets.semiFinalWinner = vice champion
-extra_bets.title           = betting champion and vice champion
+extra_bets.finalWinner      = champion
+extra_bets.points           = {0} points
+extra_bets.reachablePoints  = reachable points
+extra_bets.reachedPoints    = reached points
+extra_bets.semiFinalWinner  = vice champion
+extra_bets.thirdFinalWinner = 3rd Winner
+extra_bets.title            = betting champion and vice champion
 
 extrabet.bets.of.others = ... these are bets of the others
 
