--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -132,7 +132,7 @@ country.it            = Italien
 country.jam           = Jamaika
 country.jor           = Jordanien
 country.jpn           = Japan
-country.kaz           = Kazakhstan
+country.kaz           = Kasachstan
 country.ken           = Kenya
 country.kgz           = Kyrgyzstan
 country.kor           = Korea Republic
