--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,14 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
+administration.cache.title                       = Cache Administration
+administration.clearCache                        = Caches l\u00F6schen
 administration.createEmMatches                   = EM 2016 Gruppenspiele anlegen
 administration.createRandomMatches               = Zufallsspiele anlegen
 administration.deleteAllBetsAndMatches           = Alle Tipps und Spiele l\u00F6schen
 administration.demoBetsAllUsers                  = Testtipps f\u00FCr alle Benutzer anlegen
 administration.msg.info.allBetsAndMatchesDeleted = Alle Tipps und Spiele wurden gel\u00F6scht
+administration.msg.info.cacheCleared             = Alle Caches gel\u00F6scht!
 administration.msg.info.demoBetsCreated          = Test-Tipps wurden erfolgreich angelegt!
 administration.msg.info.demoMatchesCreated       = Testspiele wurden erfolgreich angelegt!
 administration.msg.info.demoResultsCreated       = Testergebnisse erfolgreich erzeugt!
@@ -402,6 +405,7 @@ navigation.betting           = Tippen
 navigation.betting.extraBets = Bonus-Tipps
 navigation.betting.open      = noch zu tippen
 navigation.changePassword    = Passwort \u00E4ndern
+navigation.clearCaches       = Cache Administration
 navigation.dataCreation      = Datenanlage
 navigation.excelimport       = Excel-Import
 navigation.info              = Infos
