--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,11 +1,14 @@
 
 active.users.title = currently logged in users
 
+administration.cache.title                       = Cache Administration
+administration.clearCache                        = clear caches
 administration.createEmMatches                   = create matches of EM 2016
 administration.createRandomMatches               = create random matches
 administration.deleteAllBetsAndMatches           = Delete all bets and matches
 administration.demoBetsAllUsers                  = create demo bets for all users
 administration.msg.info.allBetsAndMatchesDeleted = All bets and matches deleted!
+administration.msg.info.cacheCleared             = All caches cleared!
 administration.msg.info.demoBetsCreated          = Test bets created successfully!
 administration.msg.info.demoMatchesCreated       = Test matches created successfully!
 administration.msg.info.demoResultsCreated       = Test results created successfully!
@@ -402,6 +405,7 @@ navigation.betting           = Betting
 navigation.betting.extraBets = bonus bets
 navigation.betting.open      = not betted yet
 navigation.changePassword    = Changed password!
+navigation.clearCaches       = Cache Administration
 navigation.dataCreation      = Create data
 navigation.excelimport       = Excel-Import
 navigation.info              = Info
