added excel export

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ administration.createEmMatches                   = EM 2016 Gruppenspiele anlegen
 administration.createRandomMatches               = Zufallsspiele anlegen
 administration.deleteAllBetsAndMatches           = Alle Tipps und Spiele l\u00F6schen
 administration.demoBetsAllUsers                  = Testtipps f\u00FCr alle Benutzer anlegen
+administration.excel.export.allBets              = Alle Tipps
+administration.excel.export.title                = Excel Export
 administration.msg.info.allBetsAndMatchesDeleted = Alle Tipps und Spiele wurden gel\u00F6scht
 administration.msg.info.cacheCleared             = Alle Caches gel\u00F6scht!
 administration.msg.info.demoBetsCreated          = Test-Tipps wurden erfolgreich angelegt!
@@ -407,7 +409,8 @@ navigation.betting.open      = noch zu tippen
 navigation.changePassword    = Passwort \u00E4ndern
 navigation.clearCaches       = Cache Administration
 navigation.dataCreation      = Datenanlage
-navigation.excelimport       = Excel-Import
+navigation.excelexport       = Excel Export
+navigation.excelimport       = Excel Import
 navigation.info              = Infos
 navigation.lastlogin         = Letzte Logins
 navigation.logout            = Abmelden
