--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,8 @@ administration.createEmMatches                   = create matches of EM 2016
 administration.createRandomMatches               = create random matches
 administration.deleteAllBetsAndMatches           = Delete all bets and matches
 administration.demoBetsAllUsers                  = create demo bets for all users
+administration.excel.export.allBets              = All Bets
+administration.excel.export.title                = Excel Export
 administration.msg.info.allBetsAndMatchesDeleted = All bets and matches deleted!
 administration.msg.info.cacheCleared             = All caches cleared!
 administration.msg.info.demoBetsCreated          = Test bets created successfully!
@@ -407,7 +409,8 @@ navigation.betting.open      = not betted yet
 navigation.changePassword    = Changed password!
 navigation.clearCaches       = Cache Administration
 navigation.dataCreation      = Create data
-navigation.excelimport       = Excel-Import
+navigation.excelexport       = Excel Export
+navigation.excelimport       = Excel Import
 navigation.info              = Info
 navigation.lastlogin         = Last logins
 navigation.logout            = Logout
