refactoring; i18n country names in excel export

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -257,6 +257,11 @@ error.title               = Error
 excel.download.hint.allMatchesDeleted = Caution! All existing matches will be deleted!
 excel.download.template               = Excel Template
 excel.download.template.name          = Templates
+excel.export.date                     = Date
+excel.export.points                   = Points
+excel.export.team1                    = Team One
+excel.export.team2                    = Team Two
+excel.export.username                 = User Name
 excel.import.title                    = Import matches via Excel
 excel.upload.button                   = Upload file
 excel.upload.file                     = Upload Excel file
