--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -257,6 +257,11 @@ error.title               = Fehler
 excel.download.hint.allMatchesDeleted = Achtung! Alle vorhandenen Spiele werden gel\u00F6scht!
 excel.download.template               = Excel-Vorlage
 excel.download.template.name          = Vorlagen
+excel.export.date                     = Datum
+excel.export.points                   = Punkte
+excel.export.team1                    = Team 1
+excel.export.team2                    = Team 2
+excel.export.username                 = Benutzername
 excel.import.title                    = Excel-Datei mit Spielen importieren
 excel.upload.button                   = Datei hochladen
 excel.upload.file                     = Excel-Datei hochladen
