excel export reached points count

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ administration.createRandomMatches               = Zufallsspiele anlegen
 administration.deleteAllBetsAndMatches           = Alle Tipps und Spiele l\u00F6schen
 administration.demoBetsAllUsers                  = Testtipps f\u00FCr alle Benutzer anlegen
 administration.excel.export.allBets              = Alle Tipps
+administration.excel.export.pointsCount          = Auflistung Punkteh\u00E4ufigkeit
 administration.excel.export.title                = Excel Export
 administration.msg.info.allBetsAndMatchesDeleted = Alle Tipps und Spiele wurden gel\u00F6scht
 administration.msg.info.cacheCleared             = Alle Caches gel\u00F6scht!
@@ -259,6 +260,7 @@ excel.download.template               = Excel-Vorlage
 excel.download.template.name          = Vorlagen
 excel.export.date                     = Datum
 excel.export.points                   = Punkte
+excel.export.pointsCount              = H\u00E4ufigkeit Punktezahl
 excel.export.team1                    = Team 1
 excel.export.team2                    = Team 2
 excel.export.username                 = Benutzername
