--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,6 +8,7 @@ administration.createRandomMatches               = create random matches
 administration.deleteAllBetsAndMatches           = Delete all bets and matches
 administration.demoBetsAllUsers                  = create demo bets for all users
 administration.excel.export.allBets              = All Bets
+administration.excel.export.pointsCount          = Number of reached points count
 administration.excel.export.title                = Excel Export
 administration.msg.info.allBetsAndMatchesDeleted = All bets and matches deleted!
 administration.msg.info.cacheCleared             = All caches cleared!
@@ -259,6 +260,7 @@ excel.download.template               = Excel Template
 excel.download.template.name          = Templates
 excel.export.date                     = Date
 excel.export.points                   = Points
+excel.export.pointsCount              = Reached points count
 excel.export.team1                    = Team One
 excel.export.team2                    = Team Two
 excel.export.username                 = User Name
