--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -406,6 +406,7 @@ msg.match.deleted                      = Das Spiel {0} gegen {1} wurde gel\u00F6
 msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
 msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
 msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
+msg.user.profile.info.usernameChanged  = Der Benutzername wurde erfolgreich ge\u00E4ndert!
 msg.warn.no.statistics                 = Es liegen noch keine Statistikwerte vor!
 
 navigation.activeUserList    = angemeldete Benutzer
@@ -414,6 +415,7 @@ navigation.betting           = Tippen
 navigation.betting.extraBets = Bonus-Tipps
 navigation.betting.open      = noch zu tippen
 navigation.changePassword    = Passwort \u00E4ndern
+navigation.changeUsername    = Benutzername \u00E4ndern
 navigation.clearCaches       = Cache Administration
 navigation.dataCreation      = Datenanlage
 navigation.excelexport       = Excel Export
@@ -473,3 +475,5 @@ userprofile.changePassword.newPassword       = neues Passwort
 userprofile.changePassword.newPasswordRepeat = neues Passwort wiederholen
 userprofile.changePassword.oldPassword       = altes Passwort
 userprofile.changePassword.title             = Passwort \u00E4ndern
+userprofile.changeUsername.newUsername       = Neuer Benutzername
+userprofile.changeUsername.title             = Benutzername \u00E4ndern
