--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -406,6 +406,7 @@ msg.match.deleted                      = The match {0} vs {1} has been deleted!
 msg.match.updated                      = The match {0} vs {1} has been updated!
 msg.negative.values.not.allowed        = Negative values are not allowed!
 msg.user.profile.info.passwordChanged  = Password changed successfully!
+msg.user.profile.info.usernameChanged  = Username was changed sucessfully!
 msg.warn.no.statistics                 = There are no statistics by now!
 
 navigation.activeUserList    = logged in users
@@ -414,6 +415,7 @@ navigation.betting           = Betting
 navigation.betting.extraBets = bonus bets
 navigation.betting.open      = not betted yet
 navigation.changePassword    = Changed password!
+navigation.changeUsername    = Change username
 navigation.clearCaches       = Cache Administration
 navigation.dataCreation      = Create data
 navigation.excelexport       = Excel Export
@@ -473,3 +475,5 @@ userprofile.changePassword.newPassword       = new password
 userprofile.changePassword.newPasswordRepeat = new password repeat
 userprofile.changePassword.oldPassword       = old password
 userprofile.changePassword.title             = change password
+userprofile.changeUsername.newUsername       = New user name
+userprofile.changeUsername.title             = Change username
