--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,10 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
-administration.cache.title                       = Cache Administration
+administration.cache.title                       = Cache l\u00F6schen
+administration.change.loglevel.title             = Log Level \u00E4ndern
 administration.clearCache                        = Caches l\u00F6schen
+administration.config.title                      = Konfiguration
 administration.createEmMatches                   = EM 2016 Gruppenspiele anlegen
 administration.createRandomMatches               = Zufallsspiele anlegen
 administration.deleteAllBetsAndMatches           = Alle Tipps und Spiele l\u00F6schen
@@ -15,6 +17,7 @@ administration.msg.info.cacheCleared             = Alle Caches gel\u00F6scht!
 administration.msg.info.demoBetsCreated          = Test-Tipps wurden erfolgreich angelegt!
 administration.msg.info.demoMatchesCreated       = Testspiele wurden erfolgreich angelegt!
 administration.msg.info.demoResultsCreated       = Testergebnisse erfolgreich erzeugt!
+administration.msg.info.logLevelChanged          = Der Log Level wurde auf "{0}" ge\u00E4ndert!
 administration.msg.info.randomMatchesCreated     = Zufallsspiele wurden erfolgreich angelegt!
 administration.purgeOldActiveUsers               = \u00E4lter als 30 min l\u00F6schen
 administration.testResultsAllUsers               = Testergebnisse f\u00FCr alle Benutzer erzeugen
@@ -416,7 +419,7 @@ navigation.betting.extraBets = Bonus-Tipps
 navigation.betting.open      = noch zu tippen
 navigation.changePassword    = Passwort \u00E4ndern
 navigation.changeUsername    = Benutzername \u00E4ndern
-navigation.clearCaches       = Cache Administration
+navigation.configuration     = Konfiguration
 navigation.dataCreation      = Datenanlage
 navigation.excelexport       = Excel Export
 navigation.excelimport       = Excel Import
