--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,8 +1,10 @@
 
 active.users.title = currently logged in users
 
-administration.cache.title                       = Cache Administration
+administration.cache.title                       = Clear Caches
+administration.change.loglevel.title             = Change Log Level
 administration.clearCache                        = clear caches
+administration.config.title                      = Configuration
 administration.createEmMatches                   = create matches of EM 2016
 administration.createRandomMatches               = create random matches
 administration.deleteAllBetsAndMatches           = Delete all bets and matches
@@ -15,6 +17,7 @@ administration.msg.info.cacheCleared             = All caches cleared!
 administration.msg.info.demoBetsCreated          = Test bets created successfully!
 administration.msg.info.demoMatchesCreated       = Test matches created successfully!
 administration.msg.info.demoResultsCreated       = Test results created successfully!
+administration.msg.info.logLevelChanged          = The Log Level has been changed to "{0}"!
 administration.msg.info.randomMatchesCreated     = created random matches successfully
 administration.purgeOldActiveUsers               = purge older than 30 min
 administration.testResultsAllUsers               = create demo results for all users
@@ -416,7 +419,7 @@ navigation.betting.extraBets = bonus bets
 navigation.betting.open      = not betted yet
 navigation.changePassword    = Changed password!
 navigation.changeUsername    = Change username
-navigation.clearCaches       = Cache Administration
+navigation.configuration     = Configuration
 navigation.dataCreation      = Create data
 navigation.excelexport       = Excel Export
 navigation.excelimport       = Excel Import
